# time_series_editor_tkinter

./: .gitignore  DataFrame_maker.py  Gra.py  GraCorrector.py  README.md  fernando.md  main.ipynb  main.py  main_corrientes.ipynb  main_oleaje.ipynb  prueba.py  prueba_main.py  prueba_main_unir_datos.ipynb  pruebas_corrientes.ipynb  pruebas_oleaje.ipynb  pyproject.toml  requirements.txt
revisiones/202603/: corr_BOT1_07_T80.ipynb  corr_BOT1_10_T40.ipynb  corr_BOT1_11_T100.ipynb  oleaje_BOT1_07_T80.ipynb  oleaje_BOT1_10_T40.ipynb  oleaje_BOT1_11_T100.ipynb
services/: DataFrame_maker.py  InteractivePlotter.py  carga_de_datos.py  comprobar_netcdf.py  date_functions.py  get_tspan.py  polar2uv.py  prueba.py  utilidades.py  uv2polar.py
