[project]
name = "time-series-editor-tkinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]
